# pydata-sphinx-theme

./: .djlintrc  .flake8  .git-blame-ignore-revs  .gitignore  .jupyterlite.doit.db  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .stylelintignore  .stylelintrc.json  .stylelintrc.yaml  .transifex.yaml  .travis.yml  .yarnrc  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  babel.cfg  codecov.yml  data.json  environment.yml  github_deploy_key_pandas_dev_pandas_sphinx_theme.enc  noxfile.py  package-lock.json  package.json  perform_refactoring.py  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini  warnings.txt  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.js
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  prerelease-template.md
.github/workflows/: CI.yml  a11y.yml  artifact.yml  ci.yml  coverage.yml  docs.yml  legacy-and-latest.yml  lighthouserc.json  link-check.yml  lint.yml  main.yml  prerelease.yml  publish.yml  rtd-preview-link.yml  setup-python.yml  tests.yml  tests_tox.yml  zizmor.yml
ci/: environment-dev.yaml
doc/source/: docs.rst  index.rst
docs/: .jupyterlite.doit.db-journal  Makefile  a11y-roadmap.txt  a11y.py  changelog.rst  conf.py  contributing.rst  docutils.conf  index.md  index.rst  jupyterlite_config.json  requirements.txt  serve.py
docs/_extension/: component_directive.py  gallery_directive.py
docs/_extention/: gallery_directive.py
docs/_static/: contributors.yaml  custom-icon.js  custom-icons.js  custom.css  custom.js  gallery.yaml  pydata-icon.js  switcher.json
docs/_templates/: custom-template.html  edit-this-page.html  gallery.json  gallery.rst  gallery_item.rst  navbar-version.html  test.html
docs/api/: index.rst
docs/community/: accessibility-statement.md  bootstrap.rst  contributors.md  contributors.rst  design-system.md  i18n.rst  index.md  index.rst  inspiration.md  inspiration.rst  setup.md  setup.rst  structure.md  structure.rst  topics.md
docs/contribute/: index.md  manual.md  policies.md  setup.md  topics.md
docs/demo/: ablog.md  api.rst  demo.rst  example_pandas.rst  gallery.rst  index.rst  index2.rst  lists_tables.rst  long.rst  markdown.md  mult_headers.rst  page2.rst  pydata.md  structure.rst  theme-elements.md  web-components.rst
docs/examples/: api.rst  code-cells-myst-nb.mystnb  code-cells.ipynb  example_pandas.rst  execution.rst  gallery.md  gallery.rst  graphviz.rst  in-page-toc.rst  index.rst  link-icons.rst  mermaid.rst  no-sidebar.md  no-sidebar.rst  persistent-search-field.md  persistent-search-field.rst  pydata.ipynb  pydata.md  regressions.rst
docs/scripts/: a11y-roadmap.txt  a11y.py  generate_collaborators_gallery.py  generate_gallery_images.py  generate_gallery_text.py  subset_fonts.py  update_kitchen_sink.py
docs/user_guide/: ablog.md  ablog.rst  accessibility.md  accessibility.rst  analytics.rst  announcements.rst  back-to-top.md  branding.rst  configuring.rst  customizing.rst  extending.rst  fonts.rst  gallery.rst  header-links.rst  i18n.rst  index.md  index.rst  indices.rst  install.rst  keyboard-shortcuts.md  keyboard-shortcuts.rst  layout.rst  light-dark.rst  navigation.rst  page-toc.rst  performance.rst  readthedocs.md  readthedocs.rst  search.rst  sections.rst  source-buttons.rst  static_assets.md  static_assets.rst  styling.rst  theme-elements.md  theme-elements.rst  version-dropdown.rst  warnings.rst  web-components.rst
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_e73019af99dc6336___init___py.html  z_e73019af99dc6336_edit_this_page_py.html  z_e73019af99dc6336_logo_py.html  z_e73019af99dc6336_pygment_py.html  z_e73019af99dc6336_pygments_py.html  z_e73019af99dc6336_short_link_py.html  z_e73019af99dc6336_toctree_py.html  z_e73019af99dc6336_translator_py.html  z_e73019af99dc6336_utils_py.html
new_files/_templates/: community.html
new_files/source/: index2.rst
pandas-doc/source/: about.rst  community.rst  conf.py  donate.rst  index.rst.template
pandas-docs/source/: api.rst  conf.py  dsintro.rst  html_bootstrap_translator.py  index.rst  index.rst.template  io.rst
pandas_sphinx_theme/: __init__.py  bootstrap_html_translator.py  docs-navbar.html  docs-sidebar.html  docs-toc.html  edit_this_page.html  footer.html  layout.html  scripts.html  theme.conf
pandas_sphinx_theme/static/: sphinx-bootstrap.css_t  sphinx-bootstrap.js
pydata_sphinx_theme/: __init__.py  bootstrap_html_translator.py  docs-navbar.html  docs-sidebar-primary.html  docs-sidebar-secondary.html  docs-sidebar.html  docs-toc.html  footer.html  icon-links.html  layout.html  modes.html  search-field.html  theme.conf  version-switcher.html  webpack-macros.html
pydata_sphinx_theme/_templates/: current-version.html  edit-this-page.html  google-analytics.html  last-updated.html  navbar-menu-nav.html  navbar-nav.html  page-toc.html  prev-next.html  sidebar-nav-bs.html  sidebar-search-bs.html  sphinx-version.html  switcher.html  version-switcher.html
pydata_sphinx_theme/locale/: sphinx.pot
pydata_sphinx_theme/static/: webpack-macros.html
pydata_sphinx_theme/templates/: copyright.html
pydata_sphinx_theme/tests/: test_build.py
scripts/: generate-fa-icon-data.mjs
src/js/: index.js  theme.js
src/pydata_sphinx_theme/: __init__.py  bootstrap_html_translator.py  edit_this_page.py  fa-icon-data.json  fontawesome.py  i18n.py  logo.py  myst_nb.py  nbsphinx.py  pygment.py  pygments.py  short_link.py  toctree.py  translator.py  utils.py
src/scss/: _admonitions.scss  _api.scss  _article.scss  _base.scss  _footer.scss  _markdown.scss  _modes.scss  _navbar.scss  _sidebar-primary.scss  (+6 more)
tests/: README.md  __init__.py  check_warnings.py  conftest.py  intermittent_warning_list.txt  test_a11y.py  test_accessibility.py  test_breadcrumbs.py  test_build.py  test_edit.py  test_hypotheses.py  test_language_version_switcher.py  test_navigation_object.py  test_playwright.py  test_short_url.py  test_subset_fonts.py  utils.py  warning_list.txt  warning_list_windows.txt
tools/: divergent_links.py  github_actions_install.sh  profile.py
(+1892 files in other folders)
