[build-system]
requires = ["sphinx-theme-builder >= 0.2.0a7"]
build-backend = "sphinx_theme_builder"

[tool.sphinx-theme-builder]
node-version = "16.13.2"
theme-name = "pydata_sphinx_theme"
additional-compiled-static-assets = [
  "webpack-macros.html",
  "vendor/",
  "styles/bootstrap.css",
  "scripts/bootstrap.js"
]

[project]
name = "pydata-sphinx-theme"
description = "Bootstrap-based Sphinx theme from the PyData community"
dynamic = ["version"]
readme = "README.md"

requires-python = ">=3.7"
dependencies = [
  "sphinx>=4.2",
  "beautifulsoup4",
  "docutils!=0.17.0",
  "packaging",
  "pygments>=2.7",
  "accessible-pygments"
]

license = { file = "LICENSE" }
maintainers = [
  { name = "Joris Van den Bossche", email = "jorisvandenbossche@gmail.com" },
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
doc_base = [
  "numpydoc",
  "linkify-it-py",  # for link shortening
  "pytest",
  "pytest-regressions",
  "rich",
  "sphinxext-rediraffe",
  "sphinx-sitemap",
  # For examples section
  "ablog",
  "jupyter_sphinx",
  "pandas",
  "plotly",
  "matplotlib",
  "numpy",
  "xarray",
  "sphinx-copybutton",
  "sphinx-togglebutton",
  # Install nbsphinx in case we want to test it locally even though we can't load
  # it at the same time as MyST-NB.
  "nbsphinx",
  "ipyleaflet",
]
doc = [
  # these place an upper pin on Sphinx, so we separate them out and exclude
  # them from the `[test]` set of dependencies so we can test against latest
  # Sphinx.
  "myst-nb",
  "sphinx-design",
  "pydata-sphinx-theme[doc_base]"
]
test = [
  "pytest",
  "pydata-sphinx-theme[doc_base]",
]
coverage = [
  "pytest-cov",
  "codecov",
  "colorama",
  "pydata-sphinx-theme[doc]",
]
dev = [
  "pyyaml",
  "pre-commit",
  "nox",
  "pydata-sphinx-theme[coverage]",
]

[project.entry-points]
"sphinx.html_themes" = { pydata_sphinx_theme = "pydata_sphinx_theme" }
